--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "object-assign": "4.1.0",
+    "querystring": "^0.2.0",
+    "request": "^2.87.0"
   },
   "engine": {
     "node": "*",
